boost1.36 (1.36.0-7) unstable; urgency=low

  * patches/atomic_count_gcc.patch: New.  GCC version >= 4.2 has moved
    <bits/atomic.h> to <ext/atomic.h>.

 -- Steve M. Robbins <smr@debian.org>  Sat, 15 Nov 2008 01:03:05 -0600

boost1.36 (1.36.0-6) unstable; urgency=low

  * patches/atomic_count.patch: Add arm, armel, and hppa to architectures
    excluded from using atomic_count_sync.
  
  * patches/add-disable-long-double.patch: Only install boost_math_c99l
    and boost_math_tr1l if build-long-double is true.
  
  * patches/jam-hardening.patch: New.  Fix warnings generated by hardening
    options, -D_FORTIFY_SOURCE=2 and -Wformat-security.  Thanks to Kees
    Cook for the patch.  Closes: #505734.

 -- Steve M. Robbins <smr@debian.org>  Fri, 14 Nov 2008 22:19:44 -0600

boost1.36 (1.36.0-5) unstable; urgency=low

  * patches/no-long-double-math.patch: New.  Do not define log1p(long double) if
    BOOST_MATH_NO_LONG_DOUBLE_MATH_FUNCTIONS is defined.

 -- Steve M. Robbins <smr@debian.org>  Wed, 12 Nov 2008 23:28:17 -0600

boost1.36 (1.36.0-4) unstable; urgency=low

  * patches/atomic_count.patch: New.  Exclude sparc and m68k from
    atomic_count_sync case since they do not have __sync functions
    (http://gcc.gnu.org/onlinedocs/gcc-4.1.0/gcc/Atomic-Builtins.html).
  
  * patches/math_tools_config.patch: New.  Define
    BOOST_MATH_NO_LONG_DOUBLE_MATH_FUNCTIONS for arm, armel, mips, and
    mipsel, as they all seem to have no log1pl() function.
  
  * patches/add-disable-long-double.patch: New.  Add option
    --disable-long-double which, if specified on the bjam command line,
    omits the TR1 and C99 long double libraries.  If not specified but
    BOOST_MATH_NO_LONG_DOUBLE_MATH_FUNCTIONS is defined, we end up with a
    build failure.
  * rules: Add --disable-long-double for architectures arm, armel, hppa,
    mips, and mipsel.
  
 -- Steve M. Robbins <smr@debian.org>  Tue, 11 Nov 2008 21:31:35 -0600

boost1.36 (1.36.0-3) unstable; urgency=low
