@@ -26,7 +26,8 @@ gcc_version = gcc43
 boost_libs := date-time filesystem graph iostreams math program-options python regex serialization signals system test thread wave
 
 # these are special cases, where shared library has not the same name of the Boost library
-boost_lib_math := math_c99 math_c99f math_c99l math_tr1 math_tr1f math_tr1l
+boost_lib_math := math_c99 math_c99f math_tr1 math_tr1f
+boost_lib_math_long_double := math_c99l math_tr1l
 boost_lib_serialization := serialization wserialization
 boost_lib_test := prg_exec_monitor unit_test_framework
 
@@ -129,22 +130,30 @@ mk_debhelper_files = \
 		) \
 	)
 
+BUILD_LONG_DOUBLE = yes
+
 TOOLSET_CONFIG="using gcc : : : <compileflags>-D_REENTRANT ;"
 ifeq ($(DEB_BUILD_ARCH), hppa)
 TOOLSET_CONFIG="using gcc : : : <compileflags>-D_REENTRANT <compileflags>-mlong-calls <compileflags>-DBOOST_SP_USE_PTHREADS ;"
-JAM_OPT = --disable-long-double
+BUILD_LONG_DOUBLE = no
 else ifeq ($(DEB_BUILD_ARCH), sparc)
 TOOLSET_CONFIG="using gcc : : : <compileflags>-D_REENTRANT <compileflags>-DBOOST_SP_USE_PTHREADS ;"
 else ifeq ($(DEB_BUILD_ARCH), arm)
 TOOLSET_CONFIG="using gcc : : : <compileflags>-D_REENTRANT <compileflags>-DBOOST_SP_USE_PTHREADS ;"
-JAM_OPT = --disable-long-double
+BUILD_LONG_DOUBLE = no
 else ifeq ($(DEB_BUILD_ARCH), armel)
 TOOLSET_CONFIG="using gcc : : : <compileflags>-D_REENTRANT <compileflags>-DBOOST_SP_USE_PTHREADS ;"
-JAM_OPT = --disable-long-double
+BUILD_LONG_DOUBLE = no
 else ifeq ($(DEB_BUILD_ARCH), mips)
-JAM_OPT = --disable-long-double
+BUILD_LONG_DOUBLE = no
 else ifeq ($(DEB_BUILD_ARCH), mipsel)
-JAM_OPT = --disable-long-double
+BUILD_LONG_DOUBLE = no
+endif
+
+ifeq ($(BUILD_LONG_DOUBLE), yes)
+boost_lib_math += $(boost_lib_math_long_double)
+else
+JAM_OPT += --disable-long-double
 endif
 
 PYTHON_CONFIG1 = "using python : 2.4 : /usr ;"
